# xgboost_deforestation

./: .gitignore  Bosque_y_perdida_de_bosques_por_Distrito_al_2024_curated.csv  Data_Dictionary_deforestation_dataset_PERU.xlsx  README.md  coca_report_2021_2024.md  deforestation_dataset_PERU.csv  deforestation_dataset_PERU_imputed_coca.csv  deforestation_dataset_PERU_imputed_coca_idh.csv  figuras_codigo_CIP.R  imputation_vs_xgboost_discussion.txt  main.py  mapas_codigo_CIP.R  missing_by_year_counts.csv  pitch_info.md  pyproject.toml
Bosque_NoBosque_Perdida_2001_2024_Raster/: Bosque_No_Bosque_2024.tfw  Bosque_No_Bosque_2024.tif.aux.xml  Bosque_No_Bosque_2024.tif.xml  Metadata Bosque No Bosque y Perdida de Bosque.docx
data_external/: coca_department_2020_2024.csv
frontend/: README.md  app.js  index.html  styles.css  verify_api.py
frontend/data/: .gitkeep
models/xgb_timecv_v1/: bundle.joblib  feature_columns.json  metrics_report.json  model.json  test_predictions.csv  trials_log.csv
models/xgb_timecv_v1_gpu/: metrics_report.json  test_predictions.csv  trials_log.csv
models/xgb_tune_v1/: bundle.joblib  feature_columns.json  metrics_report.json  model.json  test_predictions.csv  trials_log.csv
reports/forest_loss_trends/: department_loss_long.csv  department_summary_2021_2024.csv  province_loss_long.csv  province_summary_2021_2024.csv
reports/hindcast_2021_2024/: assumptions_used.json  metrics_by_department.csv  metrics_by_year.csv  observed_vs_pred_by_province_2021_2024.csv  (+2 more)
scenarios/: scenarios.yaml
scripts/: make_geojson.py
src/: fill_idh_from_xlsx.py
(+35 files in other folders)
