[project]
name = "deforestation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cmocean>=4.0.3",
    "fiona>=1.10.1",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "llvmlite>=0.46.0",
    "matplotlib>=3.10.8",
    "numpy<2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyproj>=3.7.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "shapely>=2.1.2",
    "xgboost>=3.1.3",
]
